--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "babel-polyfill": "^6.26.0",
-    "jquery": "^3.5.1"
+    "fractional": "^1.0.0",
+    "jquery": "^3.5.1",
+    "uniqid": "^5.2.0"
   }
 }
